perbaiki size dimens

--- a/soundrecorder/src/main/res/layout/widget_record_horizontal_zaif.xml
+++ b/soundrecorder/src/main/res/layout/widget_record_horizontal_zaif.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:id="@+id/llBackground"
-    android:paddingVertical="3dp"
+    android:paddingVertical="@dimen/_3sdp"
     android:background="@drawable/button_white"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
@@ -13,42 +13,42 @@
 
     <ImageView
         android:layout_gravity="center"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="@dimen/_5sdp"
         android:id="@+id/ivNote"
-        android:padding="10dp"
+        android:padding="@dimen/_7sdp"
         android:clickable="true"
         android:focusable="true"
         android:background="@drawable/button_black"
         app:srcCompat="@drawable/baseline_note_add_24"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_30sdp"
         android:contentDescription="@string/app_name" />
 
 
     <ImageView
         android:layout_gravity="center"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="@dimen/_3sdp"
         android:id="@+id/ivSong"
-        android:padding="10dp"
+        android:padding="@dimen/_7sdp"
         android:background="@drawable/button_black"
         app:srcCompat="@drawable/icon_music"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_30sdp"
         android:clickable="true"
         android:focusable="true"
         android:contentDescription="@string/app_name" />
 
 
     <ImageView
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="@dimen/_3sdp"
         android:visibility="gone"
         android:id="@+id/ivDelete"
         android:layout_gravity="center"
         android:background="@drawable/button_record_color"
-        android:padding="15dp"
+        android:padding="@dimen/_10sdp"
         app:srcCompat="@drawable/ic_cancel"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/_40sdp"
+        android:layout_height="@dimen/_40sdp"
         android:clickable="true"
         android:focusable="true"
         android:contentDescription="@string/app_name"/>
@@ -56,8 +56,7 @@
     <RelativeLayout
         android:gravity="center"
         android:id="@+id/rlRecord"
-        android:layout_marginStart="5dp"
-        android:padding="2dp"
+        android:layout_marginStart="@dimen/_3sdp"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -67,12 +66,12 @@
 
         <ImageView
             android:id="@+id/ivRecord"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="@dimen/_35sdp"
+            android:layout_height="@dimen/_30sdp"
             android:layout_centerInParent="true"
             android:background="@drawable/button_record_color"
             android:contentDescription="@string/app_name"
-            android:padding="10dp"
+            android:padding="@dimen/_8sdp"
             app:srcCompat="@drawable/record"
             tools:ignore="DuplicateSpeakableTextCheck" />
 
@@ -83,36 +82,38 @@
         android:layout_gravity="center"
         android:contentDescription="@string/app_name"
         android:visibility="gone"
-        android:background="@drawable/done"
-        android:layout_marginStart="5dp"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:padding="@dimen/_7sdp"
+        android:background="@drawable/button_green_color"
+        android:layout_marginStart="@dimen/_3sdp"
+        app:srcCompat="@drawable/baseline_check_24"
+        android:layout_width="@dimen/_40sdp"
+        android:layout_height="@dimen/_40sdp"
         android:clickable="true"
         android:focusable="true"/>
 
     <ImageView
         android:layout_gravity="center"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="@dimen/_3sdp"
         android:id="@+id/ivListRecord"
-        android:padding="10dp"
+        android:padding="@dimen/_7sdp"
         android:background="@drawable/button_black"
         app:srcCompat="@drawable/saved_song"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_30sdp"
         android:clickable="true"
         android:focusable="true"
         android:contentDescription="@string/app_name" />
 
 
     <ImageView
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="@dimen/_3sdp"
         android:id="@+id/ivVolume"
-        android:padding="5dp"
+        android:padding="@dimen/_7sdp"
         android:layout_gravity="center"
         android:background="@drawable/button_black"
         app:srcCompat="@drawable/baseline_volume_down_24"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_30sdp"
         android:clickable="true"
         android:focusable="true"
         android:contentDescription="@string/app_name" />
@@ -136,15 +137,15 @@
 
     <ImageView
         android:layout_gravity="center"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="@dimen/_3sdp"
         android:background="@drawable/button_black"
         android:id="@+id/ivChangeColor"
         android:contentDescription="@string/app_name"
-        android:padding="10dp"
+        android:padding="@dimen/_7sdp"
         android:src="@drawable/fill_color"
         android:layout_marginEnd="5dp"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_30sdp"
         android:clickable="true"
         android:focusable="true"/>
 
