--- a/soundrecorder/src/main/res/layout/widget_record_vertical_zaif.xml
+++ b/soundrecorder/src/main/res/layout/widget_record_vertical_zaif.xml
@@ -4,15 +4,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:id="@+id/llRecordBackground"
+    android:id="@+id/llBackground"
+    android:paddingVertical="3dp"
+    android:background="@drawable/button_white"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:padding="5dp"
-    android:gravity="center">
+    android:layout_height="wrap_content">
+
 
     <ImageView
+        android:layout_gravity="center"
         android:id="@+id/ivNote"
         android:padding="10dp"
+        android:clickable="true"
+        android:focusable="true"
         android:background="@drawable/button_black"
         app:srcCompat="@drawable/baseline_note_add_24"
         android:layout_width="40dp"
@@ -20,8 +24,8 @@
         android:contentDescription="@string/app_name" />
 
 
-
     <ImageView
+        android:layout_gravity="center"
         android:layout_marginTop="5dp"
         android:id="@+id/ivSong"
         android:padding="10dp"
@@ -29,33 +33,40 @@
         app:srcCompat="@drawable/icon_music"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:clickable="true"
+        android:focusable="true"
         android:contentDescription="@string/app_name" />
+
 
     <ImageView
         android:layout_marginTop="5dp"
-        android:id="@+id/ivDelete"
         android:visibility="gone"
-        android:clickable="false"
+        android:id="@+id/ivDelete"
+        android:layout_gravity="center"
         android:background="@drawable/button_record_color"
         android:padding="15dp"
         app:srcCompat="@drawable/ic_cancel"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:clickable="true"
+        android:focusable="true"
         android:contentDescription="@string/app_name"/>
 
     <RelativeLayout
+        android:gravity="center"
         android:id="@+id/rlRecord"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_weight="1"
+        android:layout_marginTop="3dp"
+        android:padding="2dp"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
-        android:layout_height="0dp">
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true">
 
 
         <ImageView
             android:id="@+id/ivRecord"
             android:layout_width="40dp"
-            android:layout_marginStart="6dp"
             android:layout_height="40dp"
             android:layout_centerInParent="true"
             android:background="@drawable/button_record_color"
@@ -67,53 +78,73 @@
     </RelativeLayout>
 
     <ImageView
-        android:layout_marginBottom="5dp"
         android:id="@+id/ivDone"
+        android:layout_gravity="center"
+        android:contentDescription="@string/app_name"
         android:visibility="gone"
         android:background="@drawable/done"
+        android:layout_marginTop="3dp"
         android:layout_width="40dp"
-        android:layout_height="40dp"/>
+        android:layout_height="40dp"
+        android:clickable="true"
+        android:focusable="true"/>
 
     <ImageView
+        android:layout_gravity="center"
+        android:layout_marginTop="3dp"
         android:id="@+id/ivListRecord"
         android:padding="10dp"
         android:background="@drawable/button_black"
         app:srcCompat="@drawable/saved_song"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:clickable="true"
+        android:focusable="true"
         android:contentDescription="@string/app_name" />
+
 
     <ImageView
         android:layout_marginTop="5dp"
         android:id="@+id/ivVolume"
-        android:padding="10dp"
+        android:padding="5dp"
+        android:layout_gravity="center"
         android:background="@drawable/button_black"
         app:srcCompat="@drawable/baseline_volume_down_24"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:clickable="true"
+        android:focusable="true"
         android:contentDescription="@string/app_name" />
+
 
 
     <TextView
         android:id="@+id/tvTimerView"
         android:visibility="gone"
+        android:layout_gravity="center"
         android:layout_marginStart="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:layout_marginEnd="10dp"
-        android:textColor="@color/red_A700"
-        android:text="REC ◉"/>
+        android:layout_marginEnd="5dp"
+        android:textColor="@color/red_900"
+        android:text="REC ◉"
+        tools:ignore="HardcodedText" />
 
 
     <ImageView
+        android:layout_gravity="center"
         android:layout_marginTop="5dp"
-        android:background="@drawable/button_setting_color"
-        android:id="@+id/ivSetting"
+        android:background="@drawable/button_black"
+        android:id="@+id/ivChangeColor"
+        android:contentDescription="@string/app_name"
         android:padding="10dp"
-        android:src="@drawable/baseline_settings_white"
+        android:src="@drawable/fill_color"
         android:layout_width="40dp"
-        android:layout_height="40dp"/>
+        android:layout_height="40dp"
+        android:clickable="true"
+        android:focusable="true"/>
 
 </LinearLayout>
+
