--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,11 +38,11 @@ Marquee Otomatis: Fungsi startScroll() memulai marquee, sedangkan pauseScroll() 
 Pembaruan UI: Kode ini sudah berada di thread UI, sehingga runOnUiThread tidak perlu digunakan di sini kecuali dari luar kelas ini.
 "
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textSize="@dimen/_14ssp"
         app:marquee_speed="100.0"
         tools:ignore="HardcodedText" />
 
-   <!-- <androidx.fragment.app.FragmentContainerView
+    <androidx.fragment.app.FragmentContainerView
         android:layout_below="@+id/tvRunningText"
         android:id="@+id/recordingViewVerticalZaif"
         android:name="sound.recorder.widget.ui.fragment.VoiceRecordFragmentVerticalZaif"
@@ -50,7 +50,7 @@ Pembaruan UI: Kode ini sudah berada di thread UI, sehingga runOnUiThread tidak p
         android:layout_height="wrap_content"/>
 
 
-    <androidx.fragment.app.FragmentContainerView
+   <!-- <androidx.fragment.app.FragmentContainerView
         android:layout_below="@+id/tvRunningText"
         android:layout_toEndOf="@+id/recordingViewVerticalZaif"
         android:id="@+id/recordingViewVertical"
