--- a/soundrecorder/src/main/res/layout/dialog_input_email.xml
+++ b/soundrecorder/src/main/res/layout/dialog_input_email.xml
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="10dp"
-                android:textSize="20sp"
+                android:textSize="@dimen/_20ssp"
                 android:textStyle="bold"
                 android:text="@string/help_suggest"/>
 
@@ -43,8 +43,9 @@
                 android:id="@+id/etMessage"
                 android:background="@drawable/bg_edit_text"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="@dimen/_100sdp"
                 android:padding="15dp"
+                android:textSize="@dimen/_12ssp"
                 android:textColor="@color/black_de"
                 android:gravity="top"
                 android:hint="@string/input_message_here"
@@ -63,7 +64,8 @@
                     android:layout_weight="1"
                     android:fontFamily="@font/ooredoo"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/_12ssp"
+                    android:layout_height="@dimen/_30sdp"
                     android:textAllCaps="false"
                     android:textColor="@color/grayDark"
                     android:text="@string/cancel"
@@ -74,7 +76,8 @@
                     android:layout_weight="1"
                     android:layout_marginStart="10dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_30sdp"
+                    android:textSize="@dimen/_12ssp"
                     android:textAllCaps="false"
                     android:fontFamily="@font/ooredoo"
                     android:textColor="@color/grayDark"
