--- a/soundrecorder/src/main/res/layout/note_list_row.xml
+++ b/soundrecorder/src/main/res/layout/note_list_row.xml
@@ -14,13 +14,13 @@
         android:id="@+id/dot"
         android:text="1."
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/ooredoo"
         android:layout_marginEnd="10dp"
         android:includeFontPadding="false"
         android:textColor="@color/colorPrimary"
         android:lineSpacingExtra="0dp"
-        android:textSize="20sp"
+        android:textSize="@dimen/_16ssp"
         tools:ignore="HardcodedText" />
 
     <LinearLayout
@@ -30,6 +30,7 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
+            android:layout_marginTop="@dimen/_2sdp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -42,7 +43,7 @@
                 android:fontFamily="@font/ooredoo"
                 android:textStyle="bold"
                 android:textColor="@color/colorPrimary"
-                android:textSize="20sp" />
+                android:textSize="@dimen/_12ssp" />
 
             <TextView
                 android:id="@+id/title"
@@ -52,7 +53,7 @@
                 android:fontFamily="@font/ooredoo"
                 android:textStyle="bold"
                 android:textColor="@color/black_de"
-                android:textSize="20sp" />
+                android:textSize="@dimen/_12ssp" />
 
         </LinearLayout>
 
@@ -65,7 +66,7 @@
             android:fontFamily="@font/rimouski"
             android:maxLines="3"
             android:ellipsize="end"
-            android:textSize="16sp" />
+            android:textSize="@dimen/_11ssp" />
 
         <TextView
             android:layout_marginTop="5dp"
@@ -73,8 +74,8 @@
             tools:text="14 Mei"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:textSize="14sp" />
+            android:textColor="@color/green_900"
+            android:textSize="@dimen/_12ssp" />
 
     </LinearLayout>
 
