--- a/soundrecorder/src/main/res/drawable/button_record_color.xml
+++ b/soundrecorder/src/main/res/drawable/button_record_color.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#DC2918" />
+    <solid android:color="@color/red_600" />
 
     <stroke
         android:width="1dip"
-        android:color="#DC2918" />
+        android:color="@color/red_600" />
 
-    <corners android:radius="5dp" />
+    <corners android:radius="@dimen/_5sdp" />
 
 </shape>
