--- a/soundrecorder/src/main/res/layout/activity_splash_sdk.xml
+++ b/soundrecorder/src/main/res/layout/activity_splash_sdk.xml
@@ -18,7 +18,7 @@
         android:textColor="@color/white"
         tools:text="My Game"
         android:fontFamily="@font/ooredoo"
-        android:textSize="30sp"
+        android:textSize="@dimen/_25ssp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -27,8 +27,8 @@
 
     <ImageView
         android:id="@+id/animation_view1"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="@dimen/_150sdp"
+        android:layout_height="@dimen/_150sdp"
         android:scaleType="centerInside"
         android:src="@mipmap/ic_launcher"
         app:layout_constraintBottom_toTopOf="@id/tvTitle"
