--- a/soundrecorder/src/main/res/layout/bottom_sheet.xml
+++ b/soundrecorder/src/main/res/layout/bottom_sheet.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:text="@string/saved_recording_ask"
         android:fontFamily="@font/ooredoo"
-        android:textSize="20sp"
+        android:textSize="@dimen/_15ssp"
         android:layout_marginTop="40dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,8 +44,10 @@
             android:id="@+id/filenameInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:text="12"
+            android:padding="@dimen/_14sdp"
+            android:text=""
+            tools:text="@string/app_name"
+            android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -68,7 +70,8 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/cancelBtn"
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="@dimen/_40sdp"
+            android:textSize="@dimen/_12ssp"
             android:layout_weight="1"
             android:layout_marginEnd="10dp"
             app:cornerRadius="26dp"
@@ -80,7 +83,8 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/okBtn"
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="@dimen/_40sdp"
+            android:textSize="@dimen/_12ssp"
             android:layout_weight="1"
             android:layout_marginStart="10dp"
             app:cornerRadius="26dp"
