--- a/soundrecorder/src/main/res/layout/bottom_sheet_setting.xml
+++ b/soundrecorder/src/main/res/layout/bottom_sheet_setting.xml
@@ -17,7 +17,7 @@
         <RelativeLayout
             android:id="@+id/layoutBackground"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="@dimen/_40sdp"
             android:layout_margin="2dp"
             android:padding="10dp"
             android:gravity="center_vertical"
@@ -32,8 +32,8 @@
                 tools:ignore="UseCompoundDrawables">
 
                 <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="@dimen/_30sdp"
+                    android:layout_height="@dimen/_30sdp"
                     android:padding="5dp"
                     android:layout_marginEnd="10dp"
                     android:src="@drawable/ic_color"
@@ -45,7 +45,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/background_color"
                     android:textColor="#FFFFFF"
-                    android:textSize="15sp"
+                    android:textSize="@dimen/_12ssp"
                     android:fontFamily="@font/rimouski"
                     android:ellipsize="end"
                     android:maxLines="1"
@@ -55,9 +55,9 @@
 
             <ImageView
                 android:id="@+id/btnColor"
-                android:layout_width="30dp"
+                android:layout_width="@dimen/_30sdp"
                 android:layout_marginTop="5dp"
-                android:layout_height="30dp"
+                android:layout_height="@dimen/_30sdp"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="15dp"
                 android:background="@color/white" />
@@ -118,7 +118,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="@dimen/_40sdp"
             android:layout_margin="2dp"
             android:padding="10dp"
             android:gravity="center_vertical"
@@ -135,8 +135,8 @@
                 tools:ignore="UselessParent">
 
                 <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="@dimen/_30sdp"
+                    android:layout_height="@dimen/_30sdp"
                     android:padding="5dp"
                     android:layout_marginEnd="10dp"
                     app:srcCompat="@drawable/ic_baseline_volume_down_24"
@@ -146,7 +146,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/song_volume"
-                    android:textSize="15sp"
+                    android:textSize="@dimen/_12ssp"
                     android:textColor="@color/white"
                     android:fontFamily="@font/rimouski"
                     android:ellipsize="end"
