--- a/soundrecorder/src/main/res/layout/dialog_volume_control.xml
+++ b/soundrecorder/src/main/res/layout/dialog_volume_control.xml
@@ -9,7 +9,7 @@
     <TextView
         android:fontFamily="@font/rodfellows_wacky"
         android:textColor="@color/yellow_200"
-        android:textSize="20sp"
+        android:textSize="@dimen/_12ssp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/song_volume" />
@@ -22,8 +22,8 @@
 
         <ImageView
             android:layout_marginEnd="10dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
             app:srcCompat="@drawable/volume_loud_svgrepo_com"/>
 
         <SeekBar
@@ -43,7 +43,7 @@
 
         <TextView
             android:fontFamily="@font/rodfellows_wacky"
-            android:textSize="20sp"
+            android:textSize="@dimen/_12ssp"
             android:textColor="@color/yellow_200"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -52,7 +52,7 @@
         <TextView
             android:layout_marginStart="10dp"
             android:fontFamily="@font/rodfellows_wacky"
-            android:textSize="20sp"
+            android:textSize="@dimen/_12ssp"
             android:textColor="@color/yellow_200"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -67,8 +67,8 @@
 
         <ImageView
             android:layout_marginEnd="10dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
             app:srcCompat="@drawable/volume_loud_svgrepo_com"/>
 
         <SeekBar
