--- a/soundrecorder/src/main/res/layout/itemview_layout.xml
+++ b/soundrecorder/src/main/res/layout/itemview_layout.xml
@@ -14,8 +14,8 @@
     android:focusable="true">
 
     <ImageView
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/_30sdp"
+        android:layout_height="@dimen/_30sdp"
         android:layout_marginEnd="16dp"
         app:srcCompat="@drawable/ic_play_circle"
         android:contentDescription="@string/app_name" />
@@ -32,7 +32,7 @@
             android:fontFamily="@font/intercom_roboto_medium"
             android:textColor="@color/black_de"
             android:textStyle="bold"
-            android:textSize="18sp"
+            android:textSize="@dimen/_12ssp"
             tools:text="Pelangi Pelangi" />
         <TextView
             android:id="@+id/file_meta"
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/intercom_roboto_medium"
             android:textColor="@color/black_de"
-            android:textSize="14sp"
+            android:textSize="@dimen/_10ssp"
             tools:text="00:60 27/01/24" />
     </LinearLayout>
 
