--- a/soundrecorder/src/main/res/layout/toastic_layout.xml
+++ b/soundrecorder/src/main/res/layout/toastic_layout.xml
@@ -11,14 +11,15 @@
 
     <ImageView
         android:id="@+id/toastic_icon"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="@dimen/_20sdp"
+        android:layout_height="@dimen/_20sdp"
         android:layout_gravity="center"
         android:layout_marginStart="5dp"
         android:contentDescription="@string/app_name"
         app:srcCompat="@drawable/ic_check" />
 
     <TextView
+        android:textSize="@dimen/_12ssp"
         android:id="@+id/toastic_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
