--- a/soundrecorder/src/main/res/layout/widget_record_horizontal_zaif.xml
+++ b/soundrecorder/src/main/res/layout/widget_record_horizontal_zaif.xml
@@ -6,7 +6,7 @@
     android:orientation="horizontal"
     android:id="@+id/llBackground"
     android:paddingVertical="@dimen/_3sdp"
-    android:background="@drawable/button_white"
+    android:background="@drawable/gradient_yellow"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -143,7 +143,7 @@
         android:contentDescription="@string/app_name"
         android:padding="@dimen/_7sdp"
         android:src="@drawable/fill_color"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="@dimen/_5sdp"
         android:layout_width="@dimen/_35sdp"
         android:layout_height="@dimen/_30sdp"
         android:clickable="true"
