perbaiki size dimens

--- a/soundrecorder/src/main/res/layout/activity_list_video.xml
+++ b/soundrecorder/src/main/res/layout/activity_list_video.xml
@@ -39,8 +39,8 @@
 
         <ProgressBar
             android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
             android:layout_centerInParent="true"/>
 
         <TextView
