--- a/soundrecorder/src/main/res/layout/widget_record_horizontal_zaif.xml
+++ b/soundrecorder/src/main/res/layout/widget_record_horizontal_zaif.xml
@@ -41,14 +41,14 @@
 
     <ImageView
         android:layout_marginStart="@dimen/_3sdp"
-        android:visibility="gone"
+        android:visibility="visible"
         android:id="@+id/ivDelete"
         android:layout_gravity="center"
         android:background="@drawable/button_record_color"
         android:padding="@dimen/_10sdp"
         app:srcCompat="@drawable/ic_cancel"
-        android:layout_width="@dimen/_40sdp"
-        android:layout_height="@dimen/_40sdp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_30sdp"
         android:clickable="true"
         android:focusable="true"
         android:contentDescription="@string/app_name"/>
@@ -81,13 +81,13 @@
         android:id="@+id/ivDone"
         android:layout_gravity="center"
         android:contentDescription="@string/app_name"
-        android:visibility="gone"
+        android:visibility="visible"
         android:padding="@dimen/_7sdp"
         android:background="@drawable/button_green_color"
         android:layout_marginStart="@dimen/_3sdp"
         app:srcCompat="@drawable/baseline_check_24"
-        android:layout_width="@dimen/_40sdp"
-        android:layout_height="@dimen/_40sdp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_30sdp"
         android:clickable="true"
         android:focusable="true"/>
 
