--- a/soundrecorder/src/main/res/layout/widget_record_vertical_zaif.xml
+++ b/soundrecorder/src/main/res/layout/widget_record_vertical_zaif.xml
@@ -14,13 +14,13 @@
     <ImageView
         android:layout_gravity="center"
         android:id="@+id/ivNote"
-        android:padding="10dp"
         android:clickable="true"
         android:focusable="true"
         android:background="@drawable/button_black"
         app:srcCompat="@drawable/baseline_note_add_24"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_30sdp"
+        android:padding="@dimen/_7sdp"
         android:contentDescription="@string/app_name" />
 
 
@@ -28,11 +28,11 @@
         android:layout_gravity="center"
         android:layout_marginTop="5dp"
         android:id="@+id/ivSong"
-        android:padding="10dp"
         android:background="@drawable/button_black"
         app:srcCompat="@drawable/icon_music"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_30sdp"
+        android:padding="@dimen/_7sdp"
         android:clickable="true"
         android:focusable="true"
         android:contentDescription="@string/app_name" />
@@ -46,8 +46,8 @@
         android:background="@drawable/button_record_color"
         android:padding="15dp"
         app:srcCompat="@drawable/ic_cancel"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_30sdp"
         android:clickable="true"
         android:focusable="true"
         android:contentDescription="@string/app_name"/>
@@ -66,12 +66,12 @@
 
         <ImageView
             android:id="@+id/ivRecord"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="@dimen/_35sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:padding="@dimen/_7sdp"
             android:layout_centerInParent="true"
             android:background="@drawable/button_record_color"
             android:contentDescription="@string/app_name"
-            android:padding="10dp"
             app:srcCompat="@drawable/record"
             tools:ignore="DuplicateSpeakableTextCheck" />
 
@@ -82,10 +82,12 @@
         android:layout_gravity="center"
         android:contentDescription="@string/app_name"
         android:visibility="gone"
-        android:background="@drawable/done"
+        android:background="@drawable/button_green_color"
         android:layout_marginTop="3dp"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        app:srcCompat="@drawable/baseline_check_24"
+        android:padding="@dimen/_7sdp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_30sdp"
         android:clickable="true"
         android:focusable="true"/>
 
@@ -93,11 +95,11 @@
         android:layout_gravity="center"
         android:layout_marginTop="3dp"
         android:id="@+id/ivListRecord"
-        android:padding="10dp"
         android:background="@drawable/button_black"
         app:srcCompat="@drawable/saved_song"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_30sdp"
+        android:padding="@dimen/_7sdp"
         android:clickable="true"
         android:focusable="true"
         android:contentDescription="@string/app_name" />
@@ -106,12 +108,12 @@
     <ImageView
         android:layout_marginTop="5dp"
         android:id="@+id/ivVolume"
-        android:padding="5dp"
+        android:padding="@dimen/_7sdp"
         android:layout_gravity="center"
         android:background="@drawable/button_black"
         app:srcCompat="@drawable/baseline_volume_down_24"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_30sdp"
         android:clickable="true"
         android:focusable="true"
         android:contentDescription="@string/app_name" />
@@ -125,7 +127,7 @@
         android:layout_marginStart="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="@dimen/_12ssp"
         android:textStyle="bold"
         android:layout_marginEnd="5dp"
         android:textColor="@color/red_900"
@@ -139,10 +141,10 @@
         android:background="@drawable/button_black"
         android:id="@+id/ivChangeColor"
         android:contentDescription="@string/app_name"
-        android:padding="10dp"
+        android:padding="@dimen/_7sdp"
         android:src="@drawable/fill_color"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_30sdp"
         android:clickable="true"
         android:focusable="true"/>
 
