--- a/soundrecorder/src/main/res/drawable/custom_seekbar_track.xml
+++ b/soundrecorder/src/main/res/drawable/custom_seekbar_track.xml
@@ -3,7 +3,7 @@
         <shape android:shape="rectangle">
             <size android:height="4dp" /> <!-- Sesuaikan ketebalan garis track -->
             <solid android:color="#D3D3D3" /> <!-- Warna track yang belum diisi -->
-            <corners android:radius="10dp" /> <!-- Tambahkan sudut rounded -->
+            <corners android:radius="@dimen/_90sdp" /> <!-- Tambahkan sudut rounded -->
         </shape>
     </item>
 
@@ -12,7 +12,7 @@
             <shape android:shape="rectangle">
                 <size android:height="4dp" /> <!-- Sesuaikan ketebalan garis progress -->
                 <solid android:color="@color/red_900" /> <!-- Warna progress yang sudah diisi -->
-                <corners android:radius="10dp" /> <!-- Tambahkan sudut rounded untuk progress -->
+                <corners android:radius="@dimen/_90sdp" /> <!-- Tambahkan sudut rounded untuk progress -->
             </shape>
         </clip>
     </item>
