--- a/soundrecorder/src/main/res/layout/item_simple_song.xml
+++ b/soundrecorder/src/main/res/layout/item_simple_song.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <TextView android:id="@android:id/text1"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:textColor="@color/white"
+    android:layout_height="@dimen/_35sdp"
+    android:textColor="@color/black_de"
     android:layout_gravity="center_horizontal"
     android:padding="10dp"
-    android:layout_marginVertical="1dp"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/bg_item_song"
     android:fontFamily="@font/ooredoo"
-    tools:text="  Raisa Mencoba Mengerti"
+    tools:text="Raisa Mencoba Mengerti"
     android:textSize="@dimen/_12ssp"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:gravity="center_vertical"
