--- a/soundrecorder/src/main/res/layout/dialog_volume_control.xml
+++ b/soundrecorder/src/main/res/layout/dialog_volume_control.xml
@@ -3,18 +3,20 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@color/grey_600"
-    android:padding="16dp">
+    android:layout_margin="@dimen/_12sdp"
+    android:background="@color/amber_50"
+    android:padding="@dimen/_16sdp">
 
     <TextView
-        android:fontFamily="@font/rodfellows_wacky"
-        android:textColor="@color/yellow_200"
-        android:textSize="@dimen/_12ssp"
+        android:fontFamily="@font/ooredoo"
+        android:textColor="@color/black_de"
+        android:textSize="@dimen/_14ssp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/song_volume" />
 
     <LinearLayout
+        android:layout_marginTop="@dimen/_5sdp"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,8 +24,8 @@
 
         <ImageView
             android:layout_marginEnd="10dp"
-            android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_25sdp"
             app:srcCompat="@drawable/volume_loud_svgrepo_com"/>
 
         <SeekBar
@@ -42,24 +44,25 @@
         android:orientation="horizontal">
 
         <TextView
-            android:fontFamily="@font/rodfellows_wacky"
-            android:textSize="@dimen/_12ssp"
-            android:textColor="@color/yellow_200"
+            android:fontFamily="@font/ooredoo"
+            android:textSize="@dimen/_14ssp"
+            android:textColor="@color/black_de"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/volume" />
 
         <TextView
             android:layout_marginStart="10dp"
-            android:fontFamily="@font/rodfellows_wacky"
-            android:textSize="@dimen/_12ssp"
-            android:textColor="@color/yellow_200"
+            android:fontFamily="@font/ooredoo"
+            android:textSize="@dimen/_14ssp"
+            android:textColor="@color/black_de"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/app_name"/>
     </LinearLayout>
 
     <LinearLayout
+        android:layout_marginTop="@dimen/_5sdp"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -67,8 +70,8 @@
 
         <ImageView
             android:layout_marginEnd="10dp"
-            android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_25sdp"
             app:srcCompat="@drawable/volume_loud_svgrepo_com"/>
 
         <SeekBar
