--- a/soundrecorder/src/main/res/layout/item_simple_song.xml
+++ b/soundrecorder/src/main/res/layout/item_simple_song.xml
@@ -5,15 +5,14 @@
     android:layout_height="@dimen/_35sdp"
     android:textColor="@color/black_de"
     android:layout_gravity="center_horizontal"
-    android:padding="10dp"
-    android:background="@drawable/bg_item_song"
+    android:padding="@dimen/_10sdp"
     android:fontFamily="@font/ooredoo"
     tools:text="Raisa Mencoba Mengerti"
     android:textSize="@dimen/_12ssp"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
-    app:drawableStartCompat="@drawable/audio_track_small"
+    app:drawableStartCompat="@drawable/ic_play_circle"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" />
