--- a/soundrecorder/src/main/res/layout/bottom_sheet_song.xml
+++ b/soundrecorder/src/main/res/layout/bottom_sheet_song.xml
@@ -1,46 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_song"
-    android:background="@color/amber_50"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="@color/amber_50">
 
+    <!-- Tombol Close -->
 
+    <!-- ListView -->
     <ListView
-        android:layout_marginTop="5dp"
         android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/_4sdp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnCLose"
+        app:layout_constraintBottom_toTopOf="@id/llMusic"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
-        android:id="@+id/ivStop"
+        android:id="@+id/btnCLose"
+        android:layout_width="@dimen/_40sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:contentDescription="@string/app_name"
+        app:srcCompat="@drawable/close"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="8dp" />
+
+    <!-- Panel Musik -->
+    <LinearLayout
         android:visibility="gone"
+        android:id="@+id/llMusic"
+        android:layout_width="0dp"
+        android:layout_margin="@dimen/_10sdp"
+        android:background="@drawable/button_black"
+        android:backgroundTint="@color/common_google_signin_btn_text_light"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="@dimen/_12sdp"
+        android:paddingBottom="@dimen/_5sdp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:fontFamily="@font/ooredoo"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_12ssp"
+            android:gravity="center" />
+
+        <SeekBar
+            android:id="@+id/seekBar"
+            style="@style/SeekBarStyle2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnPause"
+                android:drawableStart="@drawable/ic_pause"
+                android:layout_width="@dimen/_90sdp"
+                android:background="@drawable/button_black"
+                android:layout_height="@dimen/_25sdp"
+                android:fontFamily="@font/ooredoo"
+                android:textAllCaps="false"
+                android:layout_marginHorizontal="@dimen/_10sdp"
+                android:paddingHorizontal="@dimen/_5sdp"
+                android:textColor="@color/white"
+                android:gravity="center"
+                android:text="@string/pause" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnPlay"
+                android:drawableStart="@drawable/ic_play_circle"
+                android:layout_width="@dimen/_90sdp"
+                android:layout_marginHorizontal="@dimen/_10sdp"
+                android:background="@drawable/button_white_color"
+                android:layout_height="@dimen/_25sdp"
+                android:textAllCaps="false"
+                android:paddingHorizontal="@dimen/_5sdp"
+                android:fontFamily="@font/ooredoo"
+                android:textColor="@color/white"
+                android:gravity="center"
+                android:text="@string/play" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnStop"
+                android:drawableStart="@drawable/ic_stop"
+                android:layout_width="@dimen/_90sdp"
+                android:layout_marginHorizontal="@dimen/_10sdp"
+                android:background="@drawable/button_green_color"
+                android:layout_height="@dimen/_25sdp"
+                android:fontFamily="@font/ooredoo"
+                android:textAllCaps="false"
+                android:paddingHorizontal="@dimen/_5sdp"
+                android:textColor="@color/white"
+                android:gravity="center"
+                android:text="@string/stop" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <!-- Tombol Stop Tambahan -->
+    <ImageView
+        android:id="@+id/ivStop"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
+        android:layout_margin="8dp"
+        android:visibility="gone"
         android:background="@drawable/piring"
         android:padding="15dp"
-        app:srcCompat="@drawable/ic_pause"
-        tools:ignore="HardcodedText"
-        android:contentDescription="@string/app_name" />
+        android:contentDescription="@string/app_name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <RelativeLayout
-        android:layout_alignParentEnd="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/btnCLose"
-            android:layout_gravity="right"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            app:srcCompat="@drawable/close"
-            android:contentDescription="@string/app_name"
-            tools:ignore="RtlHardcoded" />
-    </RelativeLayout>
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
