--- a/soundrecorder/src/main/res/layout/widget_record_vertical_basuri.xml
+++ b/soundrecorder/src/main/res/layout/widget_record_vertical_basuri.xml
@@ -181,7 +181,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:textSize="10sp"
-                android:fontFamily="@font/intercom_roboto_medium"
+                android:fontFamily="@font/campton_medium"
                 android:textColor="@color/black_de"
                 android:text="00:00.0"/>
 
